--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>2.0.0.RELEASE</version>
     <relativePath/>
   </parent>
-  <name>java-getting-started</name>
+  <name>mapp2</name>
 
   <properties>
     <java.version>1.8</java.version>
